# QuantiaMagica

./: LICENSE  README.md  pyproject.toml  setup.py
docs/: index.html
examples/: 01_basic_sar.py  03_ns_sar.py  04_pipeline_adc.py  06_quick_start.py  08_sigma_delta.py  10_fifth_order_sd.py  untitled.py
quantiamagica/: __init__.py
quantiamagica/adc/: __init__.py  pipeline.py
quantiamagica/core/: base.py  events.py
